resources/web-deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-deploy
  template:
    metadata:
      labels:
        app: web-deploy
    spec:
      containers:
      - name: web-container
        image: docker.io/noabt/myapp:final
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port : 3000
          initialDelaySeconds: 5
          periodSeconds: 10  
---

apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: ClusterIP
  selector:
    app: web-deploy
  ports:
    - protocol: TCP
      port: 3000  # The port exposed by the service
      targetPort: 3000  # The port your application listens on
