resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: driving-class-manager.com
    http:
      paths:
      - path: /  
        pathType: Prefix  
        backend:
          service:
            name: web-service
            port:
              number: 3000
